--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-walletconnect": "^0.1.16",
     "@solana/wallet-adapter-wallets": "^0.19.32",
-    "@solana/web3.js": "^1.94.0",
+    "@solana/web3.js": "^1.95.0",
     "dotenv": "^16.4.5",
+    "esrun": "^3.2.26",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
@@ -29,6 +30,6 @@
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.5.3"
   }
 }
